--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -6,7 +6,6 @@
 @import "./bootstrap-dark.scss";
 @import "app-dark.scss";
 
-
 // RTL Mode
 // @import "./rtl/bootstrap-rtl";
 // @import "./rtl/components-rtl";
@@ -547,12 +546,10 @@ span.flatpickr-weekday {
   color: var(--#{$prefix}body-color) !important;
 }
 
-[data-layout-mode="dark"] {
-  .rdw-option-wrapper,
-  .rdw-dropdown-selectedtext {
-    img {
-      filter: invert(1) !important;
-    }
+.rdw-option-wrapper,
+.rdw-dropdown-selectedtext {
+  img {
+    filter: invert(1) !important;
   }
 }
 
@@ -599,54 +596,57 @@ a.ck.ck-button.ck-on {
 
 /* Change the white to any color */
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px var(--#{$prefix}custom-white) inset !important;
-    background-color: var(--#{$prefix}custom-white) !important;
-    color: var(--#{$prefix}body-color) !important;
-    -webkit-text-fill-color: var(--#{$prefix}body-color) !important;
-} 
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px var(--#{$prefix}custom-white) inset !important;
+  background-color: var(--#{$prefix}custom-white) !important;
+  color: var(--#{$prefix}body-color) !important;
+  -webkit-text-fill-color: var(--#{$prefix}body-color) !important;
+}
 
 // Select2
 
-.select2-selection__control, .select__control, .select2-selection .css-13cymwt-control, .css-t3ipsp-control{
+.select2-selection__control,
+.select__control,
+.select2-selection .css-13cymwt-control,
+.css-t3ipsp-control {
   background-color: $input-bg !important;
   border-color: $input-border-color !important;
 }
 
-.select2-selection__menu, .select__menu, .css-1nmdiq5-menu{
+.select2-selection__menu,
+.select__menu,
+.css-1nmdiq5-menu {
   background-color: var(--#{$prefix}card-bg) !important;
-  box-shadow: 0 0 0 1px var(--#{$prefix}border-color) , 0 4px 11px var(--#{$prefix}border-color)  !important;
+  box-shadow:
+    0 0 0 1px var(--#{$prefix}border-color),
+    0 4px 11px var(--#{$prefix}border-color) !important;
 }
 
-.select2-selection__option--is-focused, .select__option--is-focused,  .css-d7l1ni-option{
+.select2-selection__option--is-focused,
+.select__option--is-focused,
+.css-d7l1ni-option {
   background-color: $primary !important;
   color: $white !important;
 }
 
-.select__multi-value, .select2-selection__multi-value, .css-1p3m7a8-multiValue{
+.select__multi-value,
+.select2-selection__multi-value,
+.css-1p3m7a8-multiValue {
   background-color: var(--#{$prefix}light) !important;
 }
 
-.select__multi-value__label, .select2-selection__multi-value__label, .css-qbdosj-Input, .css-1dimb5e-singleValue, .css-wsp0cs-MultiValueGeneric{
+.select__multi-value__label,
+.select2-selection__multi-value__label,
+.css-qbdosj-Input,
+.css-1dimb5e-singleValue,
+.css-wsp0cs-MultiValueGeneric {
   color: var(--#{$prefix}body-color) !important;
 }
 
-.select__multi-value__remove, .select2-selection__multi-value__remove{
+.select__multi-value__remove,
+.select2-selection__multi-value__remove {
   background-color: var(--#{$prefix}light) !important;
   color: var(--#{$prefix}body-color) !important;
-}
-
-// auth-logo
-
-[data-layout-mode="dark"]{
-  .auth-logo{
-    .auth-logo-light{
-      display: block;
-    }
-    .auth-logo-dark{
-      display: none;
-    }
-  }
 }
