--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,18 +1,4 @@
-.betaLabel {
-  position: absolute;
-  top: 0;
-  right: -2.4rem;
-  > span {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.25rem;
-    font-size: 0.75rem;
-    line-height: 1rem;
-    border-radius: 0.375rem;
-  }
-}
-
 .logo {
   position: relative;
+  margin-top: 10px;
 }
