update the theme colors

--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -20,7 +20,7 @@ $sidebar-width-sm: 160px;
 $layout-collapsed-min-height: 1760px;
 
 // Vertical Sidebar - Dark
-$sidebar-dark-bg: #2a3042; //2c313a
+$sidebar-dark-bg: #191919; //2c313a
 $sidebar-dark-menu-item-color: #a6b0cf;
 $sidebar-dark-menu-sub-item-color: #79829c;
 $sidebar-dark-menu-item-icon-color: #6a7187;
@@ -29,7 +29,7 @@ $sidebar-dark-menu-item-active-color: #ffffff;
 
 // Topbar - Deafult Light
 $header-height: 70px;
-$header-bg: #262b3c;
+$header-bg: #191919;
 $header-item-color: #a6b0cf;
 
 // Topbar - Dark
@@ -37,17 +37,17 @@ $header-dark-bg: #556ee6;
 $header-dark-item-color: #e9ecef;
 
 // Topbar Search
-$topbar-search-bg: #161616;
+$topbar-search-bg: #0f0e0e;
 
 // Default bg
-$default-bg: #161616;
+$default-bg: #0f0e0e;
 
 // Border
 $border-color: #2a2929;
 
 // Footer
 $footer-height: 60px;
-$footer-bg: #262b3c;
+$footer-bg: #191919;
 $footer-color: #a6b0cf;
 
 // Horizontal nav
