permission: complete for first time

--- a/src/assets/scss/app-dark.scss
+++ b/src/assets/scss/app-dark.scss
@@ -37,6 +37,7 @@ File: Main Css File
 @import "custom/components/demos";
 @import "custom/components/print";
 @import "custom/components/root";
+@import "custom/components/card";
 
 // Plugins
 @import "custom/plugins/custom-scrollbar";
