complete feature edit view for first time

--- a/src/assets/scss/custom/components/_root.scss
+++ b/src/assets/scss/custom/components/_root.scss
@@ -102,6 +102,14 @@
 .form-control {
   background-color: $default-bg;
   border-color: $border-color;
+  transition:
+    background-color 0.2s ease-in-out,
+    border-color 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
+  &:focus {
+    background-color: #141313;
+    border-color: $border-color;
+  }
 }
 
 .text-muted {
