--- a/src/assets/scss/app-dark.scss
+++ b/src/assets/scss/app-dark.scss
@@ -38,6 +38,7 @@ File: Main Css File
 @import "custom/components/print";
 @import "custom/components/root";
 @import "custom/components/card";
+@import "custom/components/swal";
 
 // Plugins
 @import "custom/plugins/custom-scrollbar";
