--- a/src/assets/scss/custom/components/_card.scss
+++ b/src/assets/scss/custom/components/_card.scss
@@ -8,12 +8,18 @@
   box-shadow: $box-shadow;
   border-radius: 10px;
   :first-child {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    &.card-body,
+    &.card-header {
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
   }
   :last-child {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    &.card-body,
+    &.card-footer {
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
   }
 }
 
