--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -962,12 +962,12 @@ $input-padding-y-lg: $input-btn-padding-y-lg;
 $input-padding-x-lg: $input-btn-padding-x-lg;
 $input-font-size-lg: $input-btn-font-size-lg;
 
-$input-bg: tint-color($gray-200, 2%);
-$input-disabled-bg: tint-color($gray-200, 1%);
+$input-bg: $default-bg;
+$input-disabled-bg: tint-color($default-bg, 1%);
 $input-disabled-border-color: null;
 
 $input-color: $gray-500;
-$input-border-color: $gray-300;
+$input-border-color: $border-color;
 $input-border-width: $input-btn-border-width;
 $input-box-shadow: $box-shadow-inset;
 
