--- a/src/assets/scss/app-dark.scss
+++ b/src/assets/scss/app-dark.scss
@@ -39,6 +39,7 @@ File: Main Css File
 @import "custom/components/root";
 @import "custom/components/card";
 @import "custom/components/swal";
+@import "custom/components/dropzone";
 
 // Plugins
 @import "custom/plugins/custom-scrollbar";
