add image group lightbox

--- a/src/assets/scss/custom/components/_dropzone.scss
+++ b/src/assets/scss/custom/components/_dropzone.scss
@@ -15,6 +15,7 @@
       min-height: 150px;
       max-height: 150px;
       object-fit: cover;
+      cursor: zoom-in;
     }
     button {
       margin-top: 0.5rem;
