add feature uuids selection

--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -42,6 +42,10 @@ $topbar-search-bg: #0f0e0e;
 // Default bg
 $default-bg: #0f0e0e;
 
+:root {
+  --bs-light: #191919 !important;
+}
+
 // Border
 $border-color: #2a2929;
 
