--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -41,9 +41,10 @@ $topbar-search-bg: #0f0e0e;
 
 // Default bg
 $default-bg: #0f0e0e;
+$second-bg: #191919;
 
 :root {
-  --bs-light: #191919 !important;
+  --bs-light: $second-bg !important;
 }
 
 // Border
@@ -55,7 +56,7 @@ $footer-bg: #191919;
 $footer-color: #a6b0cf;
 
 // Horizontal nav
-$topnav-bg: #282e3f;
+$topnav-bg: #2a2929;
 $menu-item-color: #a6b0cf;
 $menu-item-active-color: #556ee6;
 
