feature/add place list item for first time

--- a/src/assets/scss/app-dark.scss
+++ b/src/assets/scss/app-dark.scss
@@ -40,6 +40,8 @@ File: Main Css File
 @import "custom/components/card";
 @import "custom/components/swal";
 @import "custom/components/dropzone";
+@import "custom/components/place-card";
+@import "custom/components/text";
 
 // Plugins
 @import "custom/plugins/custom-scrollbar";
