feature/category: add input group skeleton

--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -163,6 +163,8 @@ $danger: $red;
 $light: $gray-300;
 $dark: $gray-800;
 $night: #050505;
+$second: #191919;
+$default: #0f0e0e;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -177,6 +179,8 @@ $theme-colors: (
   "light": $light,
   "dark": $dark,
   "night": $night,
+  "second": $second,
+  "default": $default,
 );
 // scss-docs-end theme-colors-map
 
