--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -165,6 +165,7 @@ $dark: $gray-800;
 $night: #050505;
 $second: #191919;
 $default: #0f0e0e;
+$third: #232323;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -181,6 +182,7 @@ $theme-colors: (
   "night": $night,
   "second": $second,
   "default": $default,
+  "third": $third,
 );
 // scss-docs-end theme-colors-map
 
