--- a/src/assets/scss/custom/components/_helper.scss
+++ b/src/assets/scss/custom/components/_helper.scss
@@ -113,3 +113,11 @@
 .btn-close-white {
   filter: invert(1) grayscale(100%) brightness(0);
 }
+
+.mb-6 {
+  margin-bottom: 6px !important;
+}
+
+.mb-7 {
+  margin-bottom: 7px !important;
+}
