--- a/src/assets/scss/custom/structure/_topbar.scss
+++ b/src/assets/scss/custom/structure/_topbar.scss
@@ -10,6 +10,8 @@
   z-index: 1002;
   background-color: $header-bg;
   box-shadow: $box-shadow;
+  backdrop-filter: blur(8px);
+  border-bottom: 1px solid #27272a80;
   @media (max-width: 992.98px) {
     left: 0;
   }
