--- a/src/assets/scss/custom/components/_card.scss
+++ b/src/assets/scss/custom/components/_card.scss
@@ -38,18 +38,29 @@
   margin-bottom: 0;
 }
 .r-card .card-header {
-  padding: 1.25rem !important;
-  background: #191919;
-  border-bottom: 1px solid var(--bs-body-bg) !important;
+  padding: 1rem !important;
+  background: #18181b;
+  &.rounded-full {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
 
 .r-card .card-body {
-  padding: 1.25rem !important;
-  background: #191919;
-  border-bottom: 1px solid var(--bs-body-bg) !important;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  background: #18181b;
+  &:last-child {
+    padding-bottom: 1rem !important;
+  }
 }
 
 .r-card .card-footer {
-  padding: 1.25rem !important;
-  background: #191919;
+  padding-bottom: 1rem !important;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+  padding-top: 0 !important;
+  background: #18181b;
 }
