--- a/src/assets/scss/custom/structure/_vertical.scss
+++ b/src/assets/scss/custom/structure/_vertical.scss
@@ -108,6 +108,9 @@
           vertical-align: middle;
           color: $sidebar-menu-item-icon-color;
           transition: all 0.4s;
+          &.unset-min-width {
+            min-width: unset !important;
+          }
         }
 
         &:hover {
