feature/owners: complete the owner views

--- a/src/assets/scss/custom/components/_card.scss
+++ b/src/assets/scss/custom/components/_card.scss
@@ -55,6 +55,9 @@
   &:last-child {
     padding-bottom: 1rem !important;
   }
+  &:first-child {
+    padding-top: 1rem !important;
+  }
 }
 
 .r-card .card-footer {
