feature/design: fix issue

--- a/src/assets/scss/custom/structure/_horizontal-nav.scss
+++ b/src/assets/scss/custom/structure/_horizontal-nav.scss
@@ -350,4 +350,6 @@ body[data-layout="horizontal"][data-topbar="colored"] {
         }
     }
 }
-
+.sidebar-enable .menu-icon {
+    display: none !important;
+}
