--- a/src/assets/scss/custom/structure/_topbar.scss
+++ b/src/assets/scss/custom/structure/_topbar.scss
@@ -8,9 +8,8 @@
   right: 0;
   left: $sidebar-width;
   z-index: 1002;
-  background-color: $header-bg;
   box-shadow: $box-shadow;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(20px);
   border-bottom: 1px solid #27272a80;
   @media (max-width: 992.98px) {
     left: 0;
@@ -242,7 +241,8 @@ body {
 
 body {
   .navbar-brand-box {
-    background: $sidebar-dark-bg;
+    
+  border-bottom: 1px solid #27272a80;
   }
 
   .logo-dark {
