--- a/src/assets/scss/_variables-dark.scss
+++ b/src/assets/scss/_variables-dark.scss
@@ -13,6 +13,7 @@ $sidebar-menu-item-color: #545a6d;
 $sidebar-menu-sub-item-color: #545a6d;
 $sidebar-menu-item-icon-color: #7f8387;
 $sidebar-menu-item-hover-color: #383c40;
+$sidebar-menu-item-hover-bg: #383c40;
 $sidebar-menu-item-active-color: #556ee6;
 $sidebar-width: 250px;
 $sidebar-collapsed-width: 70px;
@@ -26,6 +27,9 @@ $sidebar-dark-menu-sub-item-color: #79829c;
 $sidebar-dark-menu-item-icon-color: #6a7187;
 $sidebar-dark-menu-item-hover-color: #ffffff;
 $sidebar-dark-menu-item-active-color: #ffffff;
+
+$turistik-primary: #3397e6;
+$turistik-second: #ffa500;
 
 // Topbar - Deafult Light
 $header-height: 70px;
@@ -42,6 +46,7 @@ $topbar-search-bg: #0f0e0e;
 // Default bg  18181b
 $default-bg: #09090b80;
 $second-bg: #18181b;
+$third-bg: #232323;
 
 :root {
   --bs-light: $second-bg !important;
