--- a/src/assets/scss/custom/components/_dropzone.scss
+++ b/src/assets/scss/custom/components/_dropzone.scss
@@ -2,6 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.75rem;
+  .sdraggable {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.75rem;
+  }
   .dropzone-preview {
     min-width: 150px;
     max-width: 150px;
