--- a/src/domains/root/subdomains/booking/partials/ListingSection.module.scss
+++ b/src/domains/root/subdomains/booking/partials/ListingSection.module.scss
@@ -22,6 +22,7 @@
     &_footer {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         padding-left: .5rem;
         padding-right: .5rem;
     }
