--- a/src/assets/scss/app-dark.scss
+++ b/src/assets/scss/app-dark.scss
@@ -73,6 +73,7 @@ File: Main Css File
 @import "custom/plugins/google-map";
 @import "custom/plugins/vector-maps";
 @import "custom/plugins/leaflet-maps";
+@import "custom/plugins/autofill";
 
 // Pages
 @import "custom/pages/authentication";
